# HyEm

./: README.md  pyproject.toml  requirements.txt
Fig/: readme.md
data/: readme_data.md
exp_basic/: README_basic.md  run_basic_analysis.sh  run_basic_pipeline.sh  run_paper_artifacts.sh
exp_ext1/: README_ext1.md  plot_indexability_with_theory.py  run_qe_biomed_encoder.sh  run_radius_sweep.sh  run_scale_20k.sh
exp_ext2/: README_ext2.md  adapter_ablation.py  hyper_encoder_compare.py  run_adapter_ablation.sh  run_hyper_encoder_compare.sh  run_qe_high_baseline.sh
exp_ext3/: README_ext3.md  analyze_safety_valve.py  candidate_pooling_ablation.py  depth_stratified_analysis.py  gate_robustness_test.py  make_figures.py  revision_strategy.md  run_all_ext3.sh  theoretical_scaling.py
exp_ext4/: README_ext4.md  aggregate_ext4_results.py  noise_retrieval_test.py  run_all_ext4.sh  run_noise_retrieval.sh
paper_artifacts/do/: row_dataset_stats.tex  rows_efficiency.tex  rows_gate.tex  rows_qe.tex  rows_qh.tex
paper_artifacts/ext3/: REVISION_SUMMARY.md  table_pooling_ablation.tex  table_safety_valve.tex
paper_artifacts/ext4/: ext4_SUMMARY.md  ext4_combined.tex
paper_artifacts/hpo/: row_dataset_stats.tex  rows_efficiency.tex  rows_gate.tex  rows_qe.tex  rows_qh.tex
scripts/: 00_download_data.py  01_build_subset.py  02_build_queries.py  03_encode_text.py  04_train_embeddings.py  05_train_adapters.py  06_train_gate.py  07_build_indexes.py  08_eval_retrieval.py  09_indexability_test.py  10_efficiency_benchmark.py  11_make_paper_artifacts.py
src/hyem/: __init__.py  io.py  (+1 more)
(+72 files in other folders)
